--- a/00_Ch_1_Linear_Algebraic_Systems/027-application-network-flow.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/027-application-network-flow.ipynb
@@ -12,7 +12,7 @@
    },
    "source": [
     "---\n",
-    "title: \"1.9 Case Study: Modeling Network Flow using Systems of Equations\"\n",
+    "title: \"1.9 Case Study: Modeling Network Flow using Systems of Linear Equations\"\n",
     "subject: Linear Algebraic Systems\n",
     "subtitle: Just go with the flow\n",
     "short_title: \"1.9 Case Study: Modeling Network Flow\"\n",
@@ -23,7 +23,12 @@
     "      - University of Pennsylvania\n",
     "    email: nandant@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: sample notes, ese 2030, linear algebra\n",
+    "keywords: network flow\n",
+    "math:\n",
+    "  '\\vv': '\\mathbf{#1}'\n",
+    "  '\\bm': '\\begin{bmatrix}'\n",
+    "  '\\em': '\\end{bmatrix}'\n",
+    "  '\\R': '\\mathbb{R}'\n",
     "---"
    ]
   },
@@ -42,11 +47,12 @@
    "source": [
     "## What is network flow?\n",
     "\n",
-    "We can think about network flow as the flow of traffic through a road network, or water through a grid of pipes. \n",
-    "In this section, we will try to answer questions about how much traffic or water moved through specific links in our network, and think about what would happen if we were to modify or delete those links.\n",
-    "A key assumption we will make is one of conservation. In the figure below, this means that $x_1+x_2 = 30$\n",
+    "Network flow models can be used to capture traffic flowing through a road network, water through a grid of pipes, or information flowing through the internet. In this section, we will use systems of linear equations to understand how to allocate flows (traffic, water, internet packets) across links (roads, pipes, network links) in order to meet demand (how much traffic must flow in and out of a network).  We'll also explore what happens when links are modified or deleted.\n",
+    "<!-- try to answer questions about how much traffic or water moved through specific links in our network, and think about what would happen if we were to modify or delete those links. -->\n",
     "\n",
-    "Is this a reasonable assumption? In the case of cars, this means that the system starts with no cars, and that all of the cars that enter a system leave the system entirely, and do not stop at intersections. In the case of water pipes, it means that the pipes start dry, and that the pipes end dry. In the case of packets, it means we log all inflows and outflows, and that all of the packets\n",
+    "A key modeling assumption that we make is that flow is _conserved_, i.e., flows leaving a node have to equal flows leaving a node.  Here we use the term _node_ to describe where different links (roads, pipes, etc.) meet, i.e., nodes are where links intersect.  In the figure below, flow conservation means that $x_1+x_2 = 30$.  This is a very reasonable assumption: for example, if we're talking about road traffic, it means that all cars that enter a road network eventually leave it, and that no cars can spontaneously appear or disappear within the road network.  Similarly, if we're talking about internet traffic, it means that data can't appear out of thin air, that all data entering the network eventually leaves it, and that packets can't be dropped (this is not always true for internet traffic, but we definitely prefer it when no data is lost!).\n",
+    "\n",
+    "<!-- Is this a reasonable assumption? In the case of cars, this means that the system starts with no cars, and that all of the cars that enter a system leave the system entirely, and do not stop at intersections. In the case of water pipes, it means that the pipes start dry, and that the pipes end dry. In the case of packets, it means we log all inflows and outflows, and that all of the packets -->\n",
     "\n",
     "```{image} 02-net-flow.png\n",
     ":alt: Network Flow\n",
@@ -77,14 +83,13 @@
    "metadata": {},
    "source": [
     "## Small Example\n",
-    "Let's consider a system of pipes. We measure the inflows and outflows, and no water remains in the system after measurement.\n",
+    "Let's consider a system of pipes.\n",
     "\n",
     "```{image} 02-basic-network.png\n",
     ":alt: Simple networks\n",
     ":width: 300px\n",
     ":align: center\n",
-    "```\n",
-    "> Adapted from LAA by Lay, Lay, and McDonald \n"
+    "```\n"
    ]
   },
   {
@@ -94,7 +99,7 @@
     "tags": []
    },
    "source": [
-    "Because of our assumption that the total inflows and outflows are conserved, we can say that for each intersection $\\text{inflow} - \\text{outflow} = 0$. We can rearrange terms, and get the following equation, that  $\\text{inflow} = \\text{outflow}$. This is fairly intuitive, and we'll use this law to create our system of equations. We also know that the total outflows are equal to the total inflows, and we'll call this \"total conservation\".\n",
+    "Because of our assumption that the total inflows and outflows are conserved, we can say that for each intersection $\\text{inflow} - \\text{outflow} = 0$.  We make our first observation: each intersection, or node, in the graph above leads to an equation. We can rearrange terms, and get the following equation, that  $\\text{inflow} = \\text{outflow}$. This is fairly intuitive, and we'll use this law to create our system of equations. We also know that the total outflows leaving the system must be equal to the total inflows entering the system: we'll call this _total flow conservation_.\n",
     "\n",
     "```{math}\n",
     ":label: simple-system\n",
@@ -107,11 +112,9 @@
     "x_5 + x_4 &= 60        &[\\text{from } i_4] \\\\\n",
     "\\end{align}\n",
     "```\n",
-    "Each equation above represents an equality that results from our original assumption. The first equation shows the total conservation, and the next 4 lines show the equations for each intersection.\n",
+    "Each equation above represents an equality that results from our original assumption. The first equation shows the total conservation, and the next 4 lines show the equations for each intersection. Rearranging to have the unknowns $x_i$ on the left, and the knowns on the right, we get the following system of linear equations:\n",
     "\n",
-    "We can represent this as an augmented matrix with some reorganization.\n",
-    "\n",
-    "```{math}\n",
+    "<!-- ```{math}\n",
     ":label: simple-system-reorg\n",
     "\\begin{align}\n",
     "x_1 &= 40              &[\\text{total conservation}] \\\\\n",
@@ -121,7 +124,7 @@
     "x_5 + x_4 &= 60         &[\\text{from } i_4] \\\\\n",
     "\\end{align}\n",
     "```\n",
-    "By placing the coefficients for all of the terms in the equation, we can represent this as a matrix equation. Below, we have the expanded form of this equation.\n",
+    "By placing the coefficients for all of the terms in the equation, we can represent this as a matrix equation. Below, we have the expanded form of this equation. -->\n",
     "\n",
     "```{math}\n",
     ":label: simple-system-reorg\n",
@@ -131,10 +134,10 @@
     "-1x_1 + 1x_2 + 1x_3 + 0x_4 + 0x_5 &= 30   &[\\text{from } i_1] \\\\\n",
     " 0x_1 + 1x_2 + 0x_3 + 1x_4 + 0x_5 &= 50   &[\\text{from } i_2] \\\\\n",
     " 0x_1 + 0x_2 + 1x_3 + 0x_4 + 1x_5 &= 80   &[\\text{from } i_3] \\\\\n",
-    " 0x_1 + 0x_2 + 0x_3 + 1x_4 + 1x_5 &= 60   &[\\text{from } i_4] \\\\\n",
+    " 0x_1 + 0x_2 + 0x_3 + 1x_4 + 1x_5 &= 60   &[\\text{from } i_4], \\\\\n",
     "\\end{align}\n",
     "```\n",
-    "In $Ax = b$ form, this is:\n",
+    "which we can put in $A\\vv x = \\vv b$ form:\n",
     "```{math}\n",
     "\\left[\n",
     "\\begin{array}{ccccc}\n",
@@ -165,11 +168,11 @@
     "\n",
     "\n",
     "\n",
-    "Finally, we have the augmented matrix below.\n",
+    "We can construct the augmented matrix $[A | \\vv b]$ for this system below:\n",
     "```{math}\n",
     "\\left[\n",
     "\\begin{array}{ccccc|c}\n",
-    "     &  & A &  & & b\\\\\\hline\n",
+    "     &  & A &  & & \\vv b\\\\\\hline\n",
     "    1 & 0 & 0 & 0 & 0 &  40 \\\\\n",
     "    -1 & 1 & 1 & 0 & 0 & 30 \\\\\n",
     "    0 & 1 & 0 & 1 & 0 &  50 \\\\\n",
@@ -181,8 +184,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b890349d-33c6-4c87-861c-018b15aa72f1",
+   "metadata": {},
+   "source": [
+    "## Python Implementation\n",
+    "We'll work with SymPy to go through the steps of reducing the augmented matrix into row echelon form, and then solving for the general solutin."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "03fd6bcc-e004-4cad-923d-3c59502f9516",
    "metadata": {
     "editable": true,
@@ -200,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "19b86942-25dc-4f48-b0be-2d63aa2dd092",
    "metadata": {
     "editable": true,
@@ -224,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "dc24e2b0-3933-4b9f-a42d-1fa7b3917a07",
    "metadata": {
     "tags": []
@@ -244,7 +256,7 @@
        "[ 0, 0, 0, 1, 1, 60]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "4ba36b10-7a95-451b-92c0-f478b1d65f65",
    "metadata": {
     "tags": []
@@ -276,7 +288,7 @@
        "[0, 0,  0,  0,  0,   0]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +315,7 @@
     " 0x_1 + 0x_2 + 0x_3 + -1x_4 + -1x_5 &= -60   \\\\\n",
     "\\end{align}\n",
     "```\n",
-    "Simplifying, we get the following:\n",
+    "Simplifying, we get the following system of equations:\n",
     "\n",
     "```{math}\n",
     "\\begin{align}\n",
@@ -313,7 +325,7 @@
     " x_4 + x_5 &= 60   \\\\\n",
     "\\end{align}\n",
     "```\n",
-    "To get an expression to start, we can simplify the last equation to $$x_4 = 60 -x_5$$\n",
+    "We proceed from the bottom, and express the basic variables in terms of the free variable $x_5$.  To get an expression to start, we can simplify the last equation to $$x_4 = 60 -x_5$$\n",
     "Using back substitution, we can first substitute $x_4$ into our third equation, yielding\n",
     "```{math}\n",
     "x_3 - x_4 &= 20 \\\\\n",
@@ -328,7 +340,7 @@
     "x_2 + 80 - x_5 &= 70 \\\\\n",
     "x_2 &= x_5 - 10\n",
     "```\n",
-    "Gathering all of these equations, we get:\n",
+    "Gathering all of these equations, we get the general solution:\n",
     "```{math}\n",
     "\\begin{align}\n",
     " x_1  &= 40        \\\\\n",
@@ -338,7 +350,9 @@
     " x_5 &= \\text{free}\n",
     "\\end{align}\n",
     "```\n",
-    "Now, we need to apply some human reasoning, namely that none of the traffic flow can be negative! This means that $x_5$ must be at least $10$, and at most $60$, which is due to $x_2$ and $x_4$ respectively. We set $x_5=30$, and get the following:\n",
+    "Now, we need to apply some human reasoning, namely that none of the traffic flow can be negative! The equality $x_2 = x_5 - 10$ tell us that $x_5$ must be at least $10$ (otherwise $x_2$ would be negative!), and the equality $ x_4 = 60 - x_5$ tells us that $x_5$ can be at most $60$ (otherwise $x_4$ would be negative!). \n",
+    "\n",
+    "With that in mind, we pick $x_5=30$, which corresponds to putting 30 units of flow on $x_5$, and get the following specific solution:\n",
     "```{math}\n",
     "\\begin{align}\n",
     " x_1  &= 40   \\\\\n",
@@ -357,15 +371,7 @@
     "tags": []
    },
    "source": [
-    "Let's check our solution in the original equation. We can do this via numpy as well, by using matrix multiplication. We will set our matrix $x$ based on our solution, and check that $Ax$ does equal $b$.\n",
-    "$$\n",
-    "x=\\begin{bmatrix}\n",
-    "x_1 \\\\ x_2 \\\\ x_3 \\\\ x_4 \\\\ x_5\n",
-    "\\end{bmatrix}\n",
-    "=\\begin{bmatrix}\n",
-    "40 \\\\ 20 \\\\ 50 \\\\ 30 \\\\ 30\n",
-    "\\end{bmatrix}\n",
-    "$$\n"
+    "Let's check our solution in the original equation:\n"
    ]
   },
   {
@@ -429,7 +435,7 @@
    "id": "a16ae86a-c1ab-4d94-a922-a036964230ea",
    "metadata": {},
    "source": [
-    "The above figure shows a road network that looks similar to that around Penn Engineering. We model these road networks the same way, by balancing the inflows and outflows of each node. We omit the total conservation equation, as none of our variables are in it. This yields the following equations:\n",
+    "The above figure shows a road network that looks similar to that around Penn Engineering. We model these road networks the same way, by balancing the inflows and outflows of each node, and by enforcing total flow conservation as well. This yields the following system of linear equations:\n",
     "\n",
     "```{math}\n",
     "\\begin{align}\n",
@@ -469,11 +475,11 @@
    "id": "2c2d0b68-a21e-4efe-8891-05f7d694cbf7",
    "metadata": {},
    "source": [
-    "This gives us the following matrix\n",
+    "This gives us the following augmented matrix\n",
     "```{math}\n",
     "\\left[\n",
     "\\begin{array}{ccccccccc|c}\n",
-    "    x_1 & x_2 & x_3 & x_4 & x_5 & x_6 & x_7 & x_8 & x_9 & C \\\\\n",
+    "     &  &  & & A &  &  &  &  & \\vv b \\\\\n",
     "    \\hline\n",
     "    -1  & 1   & 0   & 0   & 0   & 1   & 0   & 0   & 0   & 0 \\\\\n",
     "    0   & -1  & 1   & 0   & 1   & 0   & 0   & 0   & 0   & 50 \\\\\n",
@@ -567,7 +573,7 @@
     "```{math}\n",
     "\\left[\n",
     "\\begin{array}{ccccccccc|c}\n",
-    "    x_1 & x_2 & x_3 & x_4 & x_5 & x_6 & x_7 & x_8 & x_9 & C \\\\\n",
+    "     & & & & U & & &  &  & \\vv c \\\\\n",
     "    \\hline\n",
     "-1 & 1 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0\\\\\n",
     "0 & -1 & 1 & 0 & 1 & 0 & 0 & 0 & 0 & 50\\\\\n",
@@ -613,7 +619,7 @@
     "```     \n",
     "\n",
     "Now let's solve for the system, setting $x_7, x_8, x_9$ to be equal to $0$.\n",
-    "To do this, we first select all of the columns from the augmented matrix which correspond to basic variables. This is because if a variable is equal to zero, then we can subtract them from an equation without impact. We can think of this as closing the roads that correspond to $x_7$, $x_8$, and $x_9$."
+    "To do this, we first select all of the columns from the augmented matrix which correspond to basic variables."
    ]
   },
   {
@@ -790,7 +796,7 @@
     "$$\n",
     "\\left[\n",
     "\\begin{array}{ccccccccc|c}\n",
-    "    x_1 & x_2 & x_3 & x_4 & x_5 & x_6 & x_7 & x_8 & x_9 & C \\\\\n",
+    "    x_1 & x_2 & x_3 & x_4 & x_5 & x_6 & x_7 & x_8 & x_9 & \\vv c \\\\\n",
     "    \\hline\n",
     "    0   & 0   & 0   & 0   & 0   & 0   & 1 & 0 & 0 & 10\\\\\n",
     "\\end{array}\n",
