--- a/01_Ch_2_Vector_Spaces_and_Bases/031-vector_spaces.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/031-vector_spaces.ipynb
@@ -14,7 +14,7 @@
     "---\n",
     "title: 2.1 Real Vector Spaces\n",
     "subject: Vector Spaces and Bases\n",
-    "subtitle: Almost everything is a vector\n",
+    "subtitle: Vectors! Vectors! Vectors Everywhere!\n",
     "short_title: 2.1 Real vector spaces\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
@@ -60,9 +60,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- addition and scaling of real vector spaces\n",
-    "- axioms and operations for generic vector spaces\n",
-    "- examples of different vector spaces"
+    "- what a vector space is\n",
+    "- examples of different vector spaces\n",
+    "- how to add and scale vectors"
    ]
   },
   {
@@ -72,7 +72,9 @@
    "source": [
     "## Abstraction\n",
     "\n",
-    "In mathematics, we can view seemingly unrelated settings, objects and models at the right level of abstraction which enables us to reason them together in the same way. _Vector Space_ is an abstract notion which unifies a wide range of objects such as ordinary vectors, matrices, spaces of functions such as polynomials, exponentials, trigonometric functions, and inifinite dimensional linear operators. We recommend you to understand these new abstract concepts in the context of ordinary eucledian space such as three-dimensional space ($\\mathbb{R}^3$), and then think about applying to more abstract spaces such as polynomials, vector-valued signals, matrices. "
+    "A theme in mathematics is recognizing that seemingly unrelated settings, objects, or models, all share common properties.  By viewing them at the _right level of abstraction_, they can all be reasoned about together in the same way.  _This is a very powerful way of thinking!_  This chapter will introduce the abstract notion of a _vector space_ which unifies the seemignly disparate spaces of ordinary vectors, spaces of functions (such as polynomials, exponentials, and trigonometric functions), spaces of matrices, (infinite dimensional) linear operators (we will only briefly encounter these later in the course), and more under a common conceptual framework.\n",
+    "\n",
+    "For many of you, this will be your first foray into \"abstraction,\" and it will take some time and effort to get used to these ideas.  A good strategy is to make sure that you understand what the new concepts we introduce mean in the context of ordinary Euclidean space, and then work through how they might apply in more abstract spaces, like the space of polyomials, vector valued sampled signals over an interval, or symmetric matrices (yes, we will see that these are all examples of vector spaces!)."
    ]
   },
   {
@@ -81,6 +83,7 @@
    "metadata": {},
    "source": [
     "## Real Vector Spaces\n",
+    "We've so far relied on certain simple and intuitive algebraic properties of how matrices and vectors can be added together and scaled.  We'll try to formalize these ideas and then abstract/genearlize them next.\n",
     "\n",
     "Let us consider the space of all $n \\times 1$ real-values vectors, denoted by $\\mathbb{R}^n$. Adding two vectors $\\vv v, \\vv w \\in \\mathbb{R}^n$ can be viewed geometrically through a parallelogram, and multiplication by a scalar $c \\in \\mathbb{R}$ is stretching/shrinking the vector by factor $c$.\n",
     "\n",
@@ -98,11 +101,9 @@
     "A _vector space_ is a set $V$ equipped with two operations:\n",
     "1. Addition: adding any pair of vectors $ \\vv v, \\vv w \\in V$ produces another vector $\\vv v + \\vv w \\in V$,\n",
     "2. Scalar Multiplication: multiplying a vector $\\vv v \\in V$ by a scalar $c \\in \\mathbb{R}$ produces a vector $c \\vv v \\in V$.\n",
-    ":::\n",
     "\n",
-    ":::{prf:definition} Vector space axioms\n",
-    ":label: vec_space_ax\n",
-    "A _vector space_ $V$ is subject to the following axioms for all $\\vv u, \\vv v, \\vv w \\in V$ and scalars $c, d \\in \\mathbb{R}$\n",
+    "These are subject to the following axioms, valid for all $\\vv u, \\vv v, \\vv w \\in V$ and all scalars $c, d \\in \\mathbb{R}$:\n",
+    "(vec_space_ax)=\n",
     "1. Commutativity of Addition: $\\vv v + \\vv w = \\vv w + \\vv v$.\n",
     "2. Associativity of Addition: $\\vv u + (\\vv v + \\vv w) = (\\vv u + \\vv v) + \\vv w$.\n",
     "3. Additive Identity: There is a zero element $\\vv 0 \\in V$ satisfying $\\vv v + \\vv 0 = \\vv v = \\vv 0 + \\vv v$.\n",
@@ -113,17 +114,19 @@
     "7. Unit for Scalar Multiplication: the scalar $1 \\in \\mathbb{R}$ satisﬁes $1 \\vv v =\\vv v$.\n",
     ":::\n",
     "\n",
-    "The following properties can be deduced from the [axioms](#vec_space_ax).\n",
+    "The two operations just tell us that if we start with vectors $\\vv v, \\vv w \\in V$ and real scalars $c, d \\in \\R$, we are free to add scaled versions together and we will stay in the vector space $V$, i.e., $c\\vv v + d \\vv w \\in V$ for any choices of $c, d \\in \\R$ and  $\\vv v, \\vv w \\in V$.  The axioms that follow are a formalization of the properties we expect addition and multiplication to follow: these are true for ordinary numbers and ordinary vectors, and we want them to hold for _generic vectors_ too.  We will work through some familiar (and some not so familiar) examples soon, but we first highlight some additonal important properties that can be deduced from the [axioms](#vec_space_ax) above.\n",
     "\n",
     ":::{note} Properties\n",
     ":label: vec_space_prop\n",
-    "1. The $\\vv 0$ vector in [axiom](#vec_spac_ax) 3. is unique.\n",
-    "2. The additive inverse $-\\vv v$ in [axiom](#vec_spac_ax) 4., called the _negative of $\\vv v$_ is unique.\n",
-    "3. $$0 \\vv v = \\vv 0$ ($0$ is a scalar, $\\vv 0$ is a vector).\n",
+    "1. The $\\vv 0$ vector in [axiom](#vec_space_ax) 3. is unique.\n",
+    "2. The additive inverse $-\\vv v$ in [axiom](#vec_space_ax) 4., called the _negative of $\\vv v$_ is unique.\n",
+    "3. $0 \\vv v = \\vv 0$ ($0$ is a scalar, $\\vv 0$ is a vector).\n",
     "4. $-1 \\vv v = -\\vv v$.\n",
     "5. $c \\vv 0 = \\vv 0$ for any $c \\in \\mathbb{R}$.\n",
     "6. If $c \\vv v = \\vv 0$, then either $c=0$ or $\\vv v = \\vv 0$.\n",
-    ":::"
+    ":::\n",
+    "\n",
+    "Notice that these are all properties that obviously hold for ordinary numbers and ordinary vectors.  The above says that these \"rules\" should also hold in our new abstract vector spaces."
    ]
   },
   {
@@ -134,15 +137,17 @@
     ":::{prf:example} Eucledian Space $\\mathbb{R}^n$\n",
     ":label:Rn_ex1\n",
     "\n",
-    "$\\mathbb{R}^n$ is the space of $n \\times 1$ column vectors with addition, scaling and the $\\vv 0$ vector given below.\n",
+    "$\\mathbb{R}^n$ is the space of $n \\times 1$ column vectors with addition and scalar multiplication defined as usual:\n",
     "$$\n",
-    "\\vv v = \\bm v_1 \\\\ v_2 \\\\ \\vdots \\\\ v_n \\em, \\vv w = \\bm w_1 \\\\ w_2 \\\\ \\vdots \\\\ w_n \\em, \\vv v + \\vv w = \\bm v_1 + w_1 \\\\ v_2 + w_2 \\\\ \\vdots \\\\ v_n + w_n \\em, c \\vv v = \\bm c v_1 \\\\ c v _2 \\\\ \\vdots \\\\ c v_n\\em, \\vv 0 = \\bm 0 \\\\ 0 \\\\ \\vdots \\\\ 0 \\em\n",
+    "\\vv v = \\bm v_1 \\\\ v_2 \\\\ \\vdots \\\\ v_n \\em, \\vv w = \\bm w_1 \\\\ w_2 \\\\ \\vdots \\\\ w_n \\em, \\vv v + \\vv w = \\bm v_1 + w_1 \\\\ v_2 + w_2 \\\\ \\vdots \\\\ v_n + w_n \\em, c \\vv v = \\bm c v_1 \\\\ c v _2 \\\\ \\vdots \\\\ c v_n\\em, \n",
     "$$\n",
+    "and the zero vector $\\vv 0$ given as expected by \n",
+    "$$\\vv 0 = \\bm 0 \\\\ 0 \\\\ \\vdots \\\\ 0 \\em$$\n",
+    ":::\n",
     "\n",
-    "```{note}\n",
-    "If it is difficult to understand generic vector spaces, think about $\\mathbb{R}^3$, since we are using the same geometric ideas to add and scale encodings of different objects.\n",
-    "```\n",
-    ":::"
+    "```{tip}\n",
+    "Whenever you find yourself confused about vector spaces, try to imagine a familiar space like $\\R^3$.  We are using the same geometeric ideas, but now the \"arrows\" represent generic objects, or _vectors_, that we want to combine via addition and scaling.\n",
+    "```"
    ]
   },
   {
@@ -158,21 +163,15 @@
    "source": [
     ":::{prf:example}Real $m \\times n$ matrices $\\mathbb{R}^{m \\times n}$\n",
     ":label:Rmn_ex2\n",
-    "\n",
-    "$\\mathbb{R}^n$ is the space of $n \\times 1$ column vectors with addition, scaling and the $\\vv 0$ vector given below.\n",
-    "$$\n",
-    "\\vv v = \\bm v_1 \\\\ v_2 \\\\ \\vdots \\\\ v_n \\em, \\vv w = \\bm w_1 \\\\ w_2 \\\\ \\vdots \\\\ w_n \\em, \\vv v + \\vv w = \\bm v_1 + w_1 \\\\ v_2 + w_2 \\\\ \\vdots \\\\ v_n + w_n \\em, c \\vv v = \\bm c v_1 \\\\ c v _2 \\\\ \\vdots \\\\ c v_n\\em, \\vv 0 = \\bm 0 \\\\ 0 \\\\ \\vdots \\\\ 0 \\em\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "$\\mathbb{R}^{m \\times n}$ forms a _vector space_ under matrix additon and scalar multiplication. The $O$ \"vector\" is the matrix of all zeros $O \\in \\mathbb{R}^{m \\times n}$.\n",
+    "A new but not so different example is the space of $m \\times n$ matrices, denoted by $\\R^{m \\times n}$ (the superscript denotes the matrix dimension).\n",
+    "$\\mathbb{R}^{m \\times n}$ forms a _vector space_ under matrix additon and scalar multiplication. Here the $O$ \"vector\" is the matrix of all zeros $O \\in \\mathbb{R}^{m \\times n}$.\n",
     "\n",
     "```{warning}\n",
-    "[Matrix-matrix multiplication](./022-linsys-matvec.ipynb#matmul-def1) is **not** a vector space operation. Vector spaces only allow scalar multiplication.\n",
+    "[Matrix-matrix multiplication](../00_Ch_1_Linear_Algebraic_Systems/022-linsys-matvec.ipynb#batch) is **not** a vector space operation. Vector spaces only allow scalar multiplication.\n",
     "```\n",
     "\n",
     "```{note}\n",
-    "The vector space $\\mathbb{R}^n$ is really an $\\mathbb{R}^{n \\times 1}$ matrix. Hence, the [Eucledian space](#Rn_ex1) is a special case of [Real matrices](#Rmn_ex2).\n",
+    "The vector space $\\mathbb{R}^n$ is really $\\mathbb{R}^{n \\times 1}$, the space of $n \\times 1$ matrices. Hence, the [Eucledian space](#Rn_ex1) is a special case of the space of [Real matrices](#Rmn_ex2).\n",
     "```\n",
     ":::"
    ]
@@ -185,22 +184,21 @@
     "::::{prf:example}Sampled functions over an interval\n",
     ":label:fns_ex3\n",
     "\n",
-    "In digital signal processing and applications such as communication, we work with sampled versions of the functions $f(t)$ over the time interval $[0, 1]$ so that we can store them on a computer. This is obtained by sampling $f(t)$ at times $\\{0, \\tau, 2\\tau, \\ldots, T\\tau = 1\\}$, where $\\tau$ is the sampling period, $\\frac{1}{\\tau} = T$ is the number of samples taken over $[0, 1]$. This gives a [vector](#Rn_ex1) of size $T+1$:\n",
-    "$$\n",
-    "\\vv f = \\bm f(0) \\\\ f(\\tau) \\\\ f(2\\tau) \\\\ \\vdots \\\\ f(T\\tau) \\em.\n",
-    "$$\n",
-    " \n",
+    "In digital signal processing and applications such as communication, we work with sampled versions of the functions $f(t)$ over the time interval $[0, 1]$ so that we can store them on a computer. This is obtained by sampling $f(t)$ at times $\\{0, \\tau, 2\\tau, \\ldots, T\\tau = 1\\}$, where $\\tau$ is the sampling period, and $\\frac{1}{\\tau} = T$ is the number of samples taken over $[0, 1]$ (we assume that $\\tau$ is chosen so that $T$ is an integer).\n",
     ":::{figure}../figures/03-function_sampled.jpg\n",
     ":alt: Sampled function\n",
     ":width: 300px\n",
     ":align: center\n",
     ":::\n",
+    "This gives a [vector](#Rn_ex1) of size $T+1$:\n",
+    "$$\n",
+    "\\vv f = \\bm f(0) \\\\ f(\\tau) \\\\ f(2\\tau) \\\\ \\vdots \\\\ f(T\\tau) \\em.\n",
+    "$$\n",
+    "So even though we started with a function defined over a continuous interval, after sampling it we end up with an ordinary vector of size $T+1$.\n",
+    "Hence, adding and scaling sampled functions is done in exactly the same way as in [](#Rn_ex1), but now the vectors $\\vv f$ and $\\vv g$ are interpreted as being samples from underlying functions $f(t)$ and $g(t)$. Sampling the zero function $z(t) = 0$ gives the usual $\\vv 0$ vector. \n",
     "\n",
-    "Hence, adding sampled functions $f(t)$ and $g(t)$, and scaling functions $f(t)$ follow the same operations as given in [](#Rn_ex1) for the corresponding vectors $\\vv f$ and $\\vv g$. Sampling the zero function $z(t) = 0$ gives the usual $\\vv 0$ vector. \n",
+    "In summary, the space of functions sampled at the **same $T+1$ time points** over an interval is not only a vector space, but is in fact $\\mathbb{R}^{T + 1}$!\n",
     "\n",
-    "```{note}\n",
-    "In summary, the space of functions sampled at the **same $T+1$ time points** over an interval is $\\mathbb{R}^{T \\times 1}$.\n",
-    "```\n",
     "::::"
    ]
   },
@@ -221,13 +219,14 @@
     "```{note}\n",
     "$\\mathbb{S}$ is also known as the _space of discrete time signals_.\n",
     "```\n",
-    "We define\n",
+    "If define\n",
     "1. addition as $\\{y_k\\} + \\{z_k\\} = \\{y_k + z_k\\}$ (element-wise), and\n",
-    "2. scalar multiplication as $c\\{y_k\\} = \\{cy_k\\}$ (scale each entry).\n",
+    "2. scalar multiplication as $c\\{y_k\\} = \\{cy_k\\}$ (scale each entry),\n",
+    "then the vector space axioms can be verified exactly as we dif for $\\R^n$.\n",
     "\n",
-    "```{note} Not finite\n",
-    "Each each vector $\\{y_k\\} \\in \\mathbb{S}$ has infinitely many elements, unlike our previous examples. Nevertheless, we can still think of $\\{y_k\\}$ as an \"arrow\" that adds and scales according to [](#vec_add_scale).\n",
-    "```\n",
+    "This is our first example of a vector space where the vectors are \"not just an arrow in $\\R^n$.\"  In fact, each vector $\\{y_k\\} \\in \\mathbb{S}$ has infinitely many elements! \n",
+    " Nevertheless, we can still think of each vector $\\{y_k\\}\\in \\mathbb{S}$ as an \"arrow\" that adds and scales as shown in [](#vec_add_scale).\n",
+    "\n",
     ":::\n"
    ]
   },
@@ -239,13 +238,15 @@
     ":::{prf:example}Real Polynomials of degree $\\leq n$: $P^{(n)}$\n",
     ":label:poly_ex5\n",
     "\n",
+    "Let's venture further into unfamiliar territory!  \n",
+    "\n",
     "Consider the space\n",
     "\n",
     "\\begin{equation}\n",
     "\\label{eqn_ex5}\n",
     "P^{(n)} = \\{p(x) = a_nx^n + a_{n-1}x^{n-1} + \\ldots + a_1x +  a_0\\}\n",
     "\\end{equation}\n",
-    "consisting of all real polynomials of degree $\\leq n$. The polynomial coefficients $a_n, a_{n-1}, \\ldots, a_1, a_0$ can be any real numbers. For example, $P^{(1)} = \\{p(x) = a_1x + a_0\\}$ is the set of all linear polynomials, since given any linear equation $q(x) = mx + b$, setting $a_1 = m$ and $a_0 = b$ shows that $q(x) \\in P^{(1)}$. The vector space operations are defined as below.\n",
+    "consisting of all real polynomials of degree $\\leq n$. The polynomial coefficients $a_n, a_{n-1}, \\ldots, a_1, a_0$ can be any real numbers. For example, $P^{(1)} = \\{p(x) = a_1x + a_0\\}$ is the set of all linear polynomials, since given any linear equation $q(x) = mx + b$, setting $a_1 = m$ and $a_0 = b$ shows that $q(x) \\in P^{(1)}$. Under the usual definitions of polynomial addition and scalar multiplication:\n",
     "1. Addition:\n",
     "   \\begin{equation}\n",
     "   \\label{poly_add}\n",
@@ -260,19 +261,20 @@
     "   cp(x) &= \\tilde{a}_{n} x^n + \\tilde{a}_{n-1} x^{n-1} + \\ldots + \\tilde{a}_1 x + \\tilde{a}_0, \\\\\n",
     "   \\tilde{a}_i &= ca_i\n",
     "   \\end{equation}\n",
+    "$P^{(n)}$ is a vector space.  The [vector space axioms]((#vec_space_ax)) can be checked to be satisfied because we addition and scaling is accomplished done by adding/scaling coefficients entrywise.\n",
     "\n",
     "```{note}\n",
-    "Addition and scaling of polynomials is very similar to how we did for ordinary vectors. This is not a coincidence at all! We will see why later! \n",
+    "Addition and scaling of polynomials is very similar to how we add and scale ordinary vectors. This is not a coincidence at all! We will see why later! \n",
     "```\n",
     "\n",
-    "Zero polynomial satisfies $a_n = a_{n-1} = \\ldots = a_1 = a_0 = 0$. Vectors in $P^{(n)}$ are _polynomial functions_ and you should think of them as \"arrows\", similar to ordinary vectors, living in the space of polynomials. \n",
+    "We still need to define the zero vector here.  In this case, it is the zero polynomial satisfying $a_n = a_{n-1} = \\ldots = a_1 = a_0 = 0$. Vectors in $P^{(n)}$ are _polynomial functions_ and you should think of them as \"arrows\", similar to ordinary vectors, living in the space of polynomials. \n",
     "\n",
     "```{warning} $n-$degree polynomials\n",
     "The space of $n-$degree polynomials is **not** a vector space. For example, consider $p(x) = x^2 + 1$ and $q(x) = -x^2 + x$, both of degree $2$, but $p(x) + q(x) = x + 1$ that has degree 1! Hence, $P^{(n)}$ is defined as polynomials of degree $\\leq n$ so that we do not go out of the space when we add elements.\n",
     "```\n",
     "\n",
     "```{warning}\n",
-    "A scalar $c \\in \\mathbb{R}$ and the constant polynomial $a_0 \\in P^{(n)}$ are different objects, even though they look similar! You should think of $a_0$ as an \"arrow\" in $P^{(n)}$ and not a scalar. \n",
+    "A scalar $c \\in \\mathbb{R}$ and the constant polynomial $a_0 \\in P^{(n)}$ are different objects, even though they look similar! You should think of $a_0$ as an \"arrow\" in $P^{(n)}$ rather than as a scalar. \n",
     "```\n",
     "\n",
     ":::\n"
@@ -285,8 +287,7 @@
    "source": [
     ":::{prf:example}Real valued functions over an interval $\\mathcal{F}(I)$\n",
     ":label:func_ex6\n",
-    "\n",
-    "Let $I \\subset \\mathbb{R}$ be an interval (a common choice is $[0, 1]$, the closed interval from $0$ to $1$). The _function space_ $\\mathcal{F}(I)$ is defined as a vector space whose elements are all real-valued function $f(x)$ defined for all $x \\in I$. The operations are\n",
+    "Our last example will be the most abstract example of a vector space we see today, and our first example of a _function space_.  Let $I \\subset \\mathbb{R}$ be an interval (a common choice is $[0, 1]$, the closed interval from $0$ to $1$). The _function space_ $\\mathcal{F}(I)$ is defined as the vector space whose elements are all real-valued function $f(x)$ defined for all $x \\in I$. The operations are\n",
     "\n",
     "1. Addition in the usual way $(f+g)(x) = f(x) + g(x)$ for all $x \\in I$\n",
     "2. Scalar multiplication $(cf)(x) = c f(x)$\n",
@@ -307,7 +308,7 @@
     "From [](#func_ex), the function $f+g$ is defined for all $x \\in [0, 1]$. Hence, $f+g \\in \\mathcal{F}(I)$.\n",
     "\n",
     "```{tip} \n",
-    "If the above discussion is confusing, pretend that we are using sampled version $\\vv f$ and $\\vv g$ of $f(t)$ and $g(t)$, respectively, but with possibly infinite and continuous elements. Adding $\\vv f + \\vv g$ gives me a new vector, just like adding $f + g$ gives me a new function\n",
+    "If the above discussion is confusing, pretend that we are using sampled version $\\vv f$ and $\\vv g$ of $f(t)$ and $g(t)$, respectively, but with very very (in fact infinitely) dense sampling. Adding $\\vv f + \\vv g$ gives me a new vector, just like adding $f + g$ gives me a new function.\n",
     "```\n",
     ":::\n"
    ]
@@ -319,14 +320,6 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/01_Vector_Spaces_and_Bases/031-vector_spaces.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fef11782-d880-4655-ba01-164fce4285fc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
