--- a/01_Ch_2_Vector_Spaces_and_Bases/032-subspaces.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/032-subspaces.ipynb
@@ -60,8 +60,7 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- what are subspaces\n",
-    "- closure under addition and scalar multiplication\n",
+    "- what a subspace is\n",
     "- examples of subspaces and subsets that are not subspaces"
    ]
   },
@@ -72,11 +71,11 @@
    "source": [
     "## Defining subspaces\n",
     "\n",
-    "An appropriate subset of vectors from a larger vector space arise a lot in real life applications and analysing such a smaller set will be useful for us. Such space of vectors living \"inside\" another vector spaces are called subspaces.\n",
+    "Vector spaces arising in applications typically consist of an appropriate subset of vectors selected from a larger vector space. These vector spaces living \"inside\" of other vector spaces are called _subspaces_.\n",
     "\n",
     ":::{prf:definition} Subspace\n",
     ":label: sub_def\n",
-    "A subspace of a vector space $V$ is a subset $W \\subset V$ that is a vector space in its own right — under the same operations of vector addition and scalar multiplication, and the same zero element.\n",
+    "A subspace of a vector space $V$ is a subset $W \\subset V$ that is a vector space in its own right under the same rules for vector addition and scalar multiplication, and the same zero element.\n",
     ":::\n",
     "\n",
     "One simple way to check if a subset $W \\subset V$ of a vector space $V$ is a subsapce:\n",
@@ -86,7 +85,7 @@
     "   \\label{closure_eqn}\n",
     "   c \\vv v + d \\vv w \\in W,\n",
     "   \\end{equation}\n",
-    "   for any vectors $\\vv v, \\vv w \\in W$ and any scalar $c, d \\in \\mathbb{R}$. Subspaces are said to be _closed under addition and scalar multiplication_ because they satisfy [](#closure_eqn)."
+    "   for any vectors $\\vv v, \\vv w \\in W$ and any scalar $c, d \\in \\mathbb{R}$. Subspaces are said to be _closed under addition and scalar multiplication_ because they satisfy [](#closure_eqn).  Subspaces must also contain the $\\vv 0$ vector: can you understand why from [](closure_eqn)?"
    ]
   },
   {
